Bug correction and enhanced tests for more coverage
Signed-off-by: vmouradian <valentin.mouradian@artelys.com>